# PdeFiniteDifferenceSolver

./: .gitignore  .gitmodules  CMakeLists.txt  CommandLineParser.h  EnumParser.h  LICENSE  PdeFiniteDifferenceSolver.sln  README.md  pdeRunner.py  plotter.py
PdeFiniteDifferenceSolver/: FiniteDifferenceManager.cpp  FiniteDifferenceManager.h  FiniteDifferenceSolver.h  IterableEnum.h  PdeFiniteDifferenceSolver.cpp  PdeFiniteDifferenceSolver.vcxproj  PdeFiniteDifferenceSolver.vcxproj.filters  PdeInputData.h  main.cpp  stdafx.cpp  stdafx.h
PdeFiniteDifferenceSolverGpuPlot/: PdeFiniteDifferenceSolverGpuPlot.vcxproj  main.cu
PdeFiniteDifferenceSolverManager/: AdvectionDiffusionSolver1D.h  AdvectionDiffusionSolver1D.tpp  AdvectionDiffusionSolver2D.h  AdvectionDiffusionSolver2D.tpp  FiniteDifferenceManager.cpp  FiniteDifferenceManager.h  FiniteDifferenceSolver.h  FiniteDifferenceSolver.tpp  FiniteDifferenceSolver1D.h  FiniteDifferenceSolver1D.tpp  FiniteDifferenceSolver2D.h  FiniteDifferenceSolver2D.tpp  IterableEnum.h  PdeFiniteDifferenceSolverManager.vcxproj  PdeFiniteDifferenceSolverManager.vcxproj.filters  PdeInputData.h  PdeInputData1D.h  PdeInputData2D.h  WaveEquationSolver1D.h  WaveEquationSolver1D.tpp  WaveEquationSolver2D.h  WaveEquationSolver2D.tpp
UnitTests/: AdvectionDiffusion1DTests.cpp  AdvectionDiffusion2DTests.cpp  AdvectionDiffusionTests.cpp  FiniteDifferenceTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  WaveEquation1DTests.cpp  WaveEquation2DTests.cpp  WaveEquationTests.cpp  main.cpp  packages.config  stdafx.h  targetver.h
Utils/: CommandLineParser.h  EnumParser.h  PdeSetup.h
